// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Avatar avatar 1`] = `
<RCTScrollView>
  <View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
            "overflow": "hidden",
          },
          Object {
            "backgroundColor": "#3F51B5",
            "borderRadius": 5,
            "height": 25,
            "width": 25,
          },
          undefined,
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#ffffff",
            },
            Object {
              "fontSize": 12.5,
            },
          ]
        }
      >
        TE
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
            "overflow": "hidden",
          },
          Object {
            "backgroundColor": "#9C27B0",
            "borderRadius": 5,
            "height": 40,
            "width": 40,
          },
          undefined,
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#ffffff",
            },
            Object {
              "fontSize": 20,
            },
          ]
        }
      >
        AA
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
            "overflow": "hidden",
          },
          Object {
            "backgroundColor": "#9C27B0",
            "borderRadius": 5,
            "height": 30,
            "width": 30,
          },
          undefined,
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#ffffff",
            },
            Object {
              "fontSize": 15,
            },
          ]
        }
      >
        BB
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
            "overflow": "hidden",
          },
          Object {
            "backgroundColor": "#3F51B5",
            "borderRadius": 2,
            "height": 25,
            "width": 25,
          },
          undefined,
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#ffffff",
            },
            Object {
              "fontSize": 12.5,
            },
          ]
        }
      >
        TE
      </Text>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Storyshots Channel Cell Direct Messages 1`] = `
<RCTScrollView>
  <View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 56,
          "opacity": 1,
          "paddingLeft": 16,
          "paddingRight": 16,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "overflow": "hidden",
            },
            Object {
              "backgroundColor": "#8BC34A",
              "borderRadius": 20,
              "height": 40,
              "width": 40,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#ffffff",
              },
              Object {
                "fontSize": 20,
              },
            ]
          }
        >
          RC
        </Text>
        <CachedImage
          source={
            Object {
              "uri": "https://demo.rocket.chat/avatar/rocket.cat",
            }
          }
          style={
            Array [
              Object {
                "position": "absolute",
              },
              Object {
                "height": 40,
                "width": 40,
              },
            ]
          }
        />
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Object {
            "color": "#444",
            "flex": 1,
            "fontSize": 16,
            "marginLeft": 16,
            "marginRight": 4,
          }
        }
      >
        rocket.cat
      </Text>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 56,
          "opacity": 1,
          "paddingLeft": 16,
          "paddingRight": 16,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "overflow": "hidden",
            },
            Object {
              "backgroundColor": "#8BC34A",
              "borderRadius": 20,
              "height": 40,
              "width": 40,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#ffffff",
              },
              Object {
                "fontSize": 20,
              },
            ]
          }
        >
          RC
        </Text>
        <CachedImage
          source={
            Object {
              "uri": "https://demo.rocket.chat/avatar/rocket.cat",
            }
          }
          style={
            Array [
              Object {
                "position": "absolute",
              },
              Object {
                "height": 40,
                "width": 40,
              },
            ]
          }
        />
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Object {
            "color": "#444",
            "flex": 1,
            "fontSize": 16,
            "marginLeft": 16,
            "marginRight": 4,
          }
        }
      >
        rocket.cat
      </Text>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 56,
          "opacity": 1,
          "paddingLeft": 16,
          "paddingRight": 16,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "overflow": "hidden",
            },
            Object {
              "backgroundColor": "#8BC34A",
              "borderRadius": 20,
              "height": 40,
              "width": 40,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#ffffff",
              },
              Object {
                "fontSize": 20,
              },
            ]
          }
        >
          RC
        </Text>
        <CachedImage
          source={
            Object {
              "uri": "https://demo.rocket.chat/avatar/rocket.cat",
            }
          }
          style={
            Array [
              Object {
                "position": "absolute",
              },
              Object {
                "height": 40,
                "width": 40,
              },
            ]
          }
        />
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Object {
            "color": "#444",
            "flex": 1,
            "fontSize": 16,
            "marginLeft": 16,
            "marginRight": 4,
          }
        }
      >
        rocket.cat
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "#1d74f5",
            "borderRadius": 5,
            "color": "#fff",
            "fontSize": 14,
            "minWidth": 20,
            "overflow": "hidden",
            "paddingLeft": 5,
            "paddingRight": 5,
            "textAlign": "center",
          }
        }
      >
        1
      </Text>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 56,
          "opacity": 1,
          "paddingLeft": 16,
          "paddingRight": 16,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "overflow": "hidden",
            },
            Object {
              "backgroundColor": "#795548",
              "borderRadius": 20,
              "height": 40,
              "width": 40,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#ffffff",
              },
              Object {
                "fontSize": 20,
              },
            ]
          }
        >
          LC
        </Text>
        <CachedImage
          source={
            Object {
              "uri": "https://demo.rocket.chat/avatar/Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries",
            }
          }
          style={
            Array [
              Object {
                "position": "absolute",
              },
              Object {
                "height": 40,
                "width": 40,
              },
            ]
          }
        />
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Object {
            "color": "#444",
            "flex": 1,
            "fontSize": 16,
            "marginLeft": 16,
            "marginRight": 4,
          }
        }
      >
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "#1d74f5",
            "borderRadius": 5,
            "color": "#fff",
            "fontSize": 14,
            "minWidth": 20,
            "overflow": "hidden",
            "paddingLeft": 5,
            "paddingRight": 5,
            "textAlign": "center",
          }
        }
      >
        9
      </Text>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 56,
          "opacity": 1,
          "paddingLeft": 16,
          "paddingRight": 16,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "overflow": "hidden",
            },
            Object {
              "backgroundColor": "#795548",
              "borderRadius": 20,
              "height": 40,
              "width": 40,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#ffffff",
              },
              Object {
                "fontSize": 20,
              },
            ]
          }
        >
          LC
        </Text>
        <CachedImage
          source={
            Object {
              "uri": "https://demo.rocket.chat/avatar/Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries",
            }
          }
          style={
            Array [
              Object {
                "position": "absolute",
              },
              Object {
                "height": 40,
                "width": 40,
              },
            ]
          }
        />
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Object {
            "color": "#444",
            "flex": 1,
            "fontSize": 16,
            "marginLeft": 16,
            "marginRight": 4,
          }
        }
      >
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "#1d74f5",
            "borderRadius": 5,
            "color": "#fff",
            "fontSize": 14,
            "minWidth": 20,
            "overflow": "hidden",
            "paddingLeft": 5,
            "paddingRight": 5,
            "textAlign": "center",
          }
        }
      >
        99
      </Text>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 56,
          "opacity": 1,
          "paddingLeft": 16,
          "paddingRight": 16,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "overflow": "hidden",
            },
            Object {
              "backgroundColor": "#795548",
              "borderRadius": 20,
              "height": 40,
              "width": 40,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#ffffff",
              },
              Object {
                "fontSize": 20,
              },
            ]
          }
        >
          LC
        </Text>
        <CachedImage
          source={
            Object {
              "uri": "https://demo.rocket.chat/avatar/Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries",
            }
          }
          style={
            Array [
              Object {
                "position": "absolute",
              },
              Object {
                "height": 40,
                "width": 40,
              },
            ]
          }
        />
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Object {
            "color": "#444",
            "flex": 1,
            "fontSize": 16,
            "marginLeft": 16,
            "marginRight": 4,
          }
        }
      >
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "#1d74f5",
            "borderRadius": 5,
            "color": "#fff",
            "fontSize": 14,
            "minWidth": 20,
            "overflow": "hidden",
            "paddingLeft": 5,
            "paddingRight": 5,
            "textAlign": "center",
          }
        }
      >
        100
      </Text>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 56,
          "opacity": 1,
          "paddingLeft": 16,
          "paddingRight": 16,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "overflow": "hidden",
            },
            Object {
              "backgroundColor": "#795548",
              "borderRadius": 20,
              "height": 40,
              "width": 40,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#ffffff",
              },
              Object {
                "fontSize": 20,
              },
            ]
          }
        >
          LC
        </Text>
        <CachedImage
          source={
            Object {
              "uri": "https://demo.rocket.chat/avatar/Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries",
            }
          }
          style={
            Array [
              Object {
                "position": "absolute",
              },
              Object {
                "height": 40,
                "width": 40,
              },
            ]
          }
        />
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Object {
            "color": "#444",
            "flex": 1,
            "fontSize": 16,
            "marginLeft": 16,
            "marginRight": 4,
          }
        }
      >
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "#1d74f5",
            "borderRadius": 5,
            "color": "#fff",
            "fontSize": 14,
            "minWidth": 20,
            "overflow": "hidden",
            "paddingLeft": 5,
            "paddingRight": 5,
            "textAlign": "center",
          }
        }
      >
        999+
      </Text>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 56,
          "opacity": 1,
          "paddingLeft": 16,
          "paddingRight": 16,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "overflow": "hidden",
            },
            Object {
              "backgroundColor": "#E91E63",
              "borderRadius": 20,
              "height": 40,
              "width": 40,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#ffffff",
              },
              Object {
                "fontSize": 20,
              },
            ]
          }
        >
          W
        </Text>
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Object {
            "color": "#444",
            "flex": 1,
            "fontSize": 16,
            "marginLeft": 16,
            "marginRight": 4,
          }
        }
      >
        W
      </Text>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 56,
          "opacity": 1,
          "paddingLeft": 16,
          "paddingRight": 16,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "overflow": "hidden",
            },
            Object {
              "backgroundColor": "#9C27B0",
              "borderRadius": 20,
              "height": 40,
              "width": 40,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#ffffff",
              },
              Object {
                "fontSize": 20,
              },
            ]
          }
        >
          WW
        </Text>
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Object {
            "color": "#444",
            "flex": 1,
            "fontSize": 16,
            "marginLeft": 16,
            "marginRight": 4,
          }
        }
      >
        WW
      </Text>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 56,
          "opacity": 1,
          "paddingLeft": 16,
          "paddingRight": 16,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "overflow": "hidden",
            },
            Object {
              "backgroundColor": undefined,
              "borderRadius": 20,
              "height": 40,
              "width": 40,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#ffffff",
              },
              Object {
                "fontSize": 20,
              },
            ]
          }
        >
          
        </Text>
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Object {
            "color": "#444",
            "flex": 1,
            "fontSize": 16,
            "marginLeft": 16,
            "marginRight": 4,
          }
        }
      >
        
      </Text>
    </View>
  </View>
</RCTScrollView>
`;
